# teltasync

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.forgejo/workflows/: pytest.yaml  python-publish.yml  typing.yaml
.github/workflows/: python-publish.yml
src/teltasync/: __init__.py  api_base.py  auth.py  base_model.py  error_codes.py  exceptions.py  modems.py  system.py  teltasync.py  unauthorized.py  utils.py
tests/: __init__.py  conftest.py  helpers.py  syrupy.py  test_api_base.py  test_auth.py  test_error_codes.py  test_modems.py  test_system.py  test_teltasync.py  test_unauthorized.py
tests/__snapshots__/: test_modems.ambr  test_system.ambr  test_teltasync.ambr  test_unauthorized.ambr
tests/fixtures/modems/: status.json  status_rut241.json  status_rut950.json  status_rutx12.json  status_trb140.json  status_trb500.json
tests/fixtures/system/: device_status.json  device_status_rut241.json  device_status_rut950.json  device_status_trb140.json  device_status_trb500.json
tests/fixtures/unauthorized/: status-with-banner.json  status.json
