[tool.poetry]
name = "teltasync"
version = "0.1.2"
description = "Async, typed API client for Teltonika routers, built for Home Assistant"
authors = ["Karl Beecken <karl@beecken.berlin>"]
packages = [
    { include = "teltasync", from = "src" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
aiohttp = "^3.12"
pydantic = "^2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
aioresponses = "^0.7"
watchdog = "^5.0"
pytest-watch = "^4.2"
mypy = "^1.18.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"