[project]
name = "teltasync"
version = "0.1.5"
description = "Async, typed API client for Teltonika routers, built for Home Assistant"
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Karl Beecken", email = "karl+teltasync@beecken.berlin" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "aiohttp>=3.13.3,<4",
  "pydantic>=2.7,<3",
]

[project.urls]
Repository = "https://codeberg.org/dmho/teltasync"

[dependency-groups]
dev = [
  "aioresponses>=0.7,<0.8",
  "mypy>=1.18.2,<2",
  "pylint>=4.0.5",
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<0.24",
  "pytest-cov>=7.0.0",
  "syrupy>=4.6.1,<5",
  "pytest-watch>=4.2,<5",
  "ruff>=0.15.2",
  "watchdog>=5.0,<6",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.13"
mypy_path = ["src"]
